## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

includedir = $(prefix)/include/cgreen

include_HEADERS = cgreen.h unit.h assertions.h breadcrumb.h constraint.h messaging.h \
mocks.h parameters.h reporter.h slurp.h vector.h text_reporter.h

#EXTRA_DIST = dbi.h.in
